--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -35,4 +35,13 @@
         <requestFocus />
     </EditText>
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button1"
+        android:layout_alignRight="@+id/button1"
+        android:layout_centerVertical="true"
+        android:text="Go to next Activity" />
+
 </RelativeLayout>
